Fixed Spacing and Added Project Component

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App {
-  text-align: center;
   background-image: url("images/overlay3.svg"), linear-gradient(-135deg, #9dc66b 5%, #4fa49a 30%, #4361c2);
   height: 100;
   padding: 1px;
+}
+
+.alt {
+	text-align: center;
+	vertical-align: middle;
 }
 
 #header .logo img {
@@ -13,20 +17,38 @@
 } 
 
 #wrapper {
-	width: 64em;
+	width: 80em;
 	max-width: calc(100% - 4em);
 	margin: 0 auto;
 }
 
+.heading {
+	padding-top: 20px;
+	padding-bottom: 10px;
+	color: blue;
+	text-align: center;
+	/* border-bottom: 7px solid burlywood; */
+	
+}
+
+.container h1::after {
+	display: block;
+    content: '';
+    width: 20em;
+	height: 3px;
+    margin: 2em 0 1em 8em;
+	border-radius: 2px;
+	background-color: tomato;
+}
 /* Navigation */
 
 #nav {
 	box-sizing: border-box;
-	background-color: #ffffff;
+	/* background-color: #16a1c4; */
 	color: #636363;
 	position: absolute;
 	padding: 1em;
-	background-color: #f7f7f7;
+	background-color: #fffffffa;
 	border-top-left-radius: 0.25em;
 	border-top-right-radius: 0.25em;
 	cursor: default;
@@ -37,15 +59,16 @@
 }
 
 ul {
-	margin: 0;
-	padding: 0;
+	margin: 0px;
+	padding: 0px;
 }
 
 li {
 	display: inline-block;
-	margin: 0 0.35em;
-	padding: 0;
+	margin: 0 1.35em;
+	/* padding: 0; */
 	vertical-align: middle;
+	font-size: 20px;
 }
 
 a {
@@ -66,21 +89,29 @@ li.active a {
 	background-color: rgba(75, 44, 214, 0.25);
 }
 
-/* Skills */
+	/* Skills */
 .icon {
 	width: 100px;
 	height: 100px; 
-	vertical-align: center;
 }
 .container {
 	background-color: #f7f7f7;
-	padding: 10px;
+	/* padding: 10px; */
 }
 .row {
+	
+}
+
+.col  {
+	/* padding: 0px 20px; */
+	/* margin: 10px; */
+}
+
+	/*Projects*/
+
+.row-content {
 	box-sizing: border-box;
-	display: inline-flex;
-	flex-wrap: nowrap;
-	justify-content: center;
-	margin: 0px;
-	padding: 0px;
+	padding: 20px;
+	border-bottom: 5px ridge;
+	/* min-height: 200px; */
 }
